# Pangea

./: README.md  load_cls.py  modeling.py  predict_all.py  predict_cls.py  requirements.txt  rm.yaml  rm_lora.yaml  test.ipynb  train_rm.py  utils.py
data/: README.md  sample_data.json
evaluation/: README.md  script.sh
predict/: predict_multimodal.py  predict_text_only.py
train/: README.md
train/LLaVA-NeXT/: pyproject.toml
train/LLaVA-NeXT/llava/model/: __init__.py
train/LLaVA-NeXT/llava/model/language_model/: llava_llama.py  llava_qwen_cls.py
train/LLaVA-NeXT/scripts/train/: finetune_pangea.sh  pretrain_pangea.sh
